fixed white space

--- a/paint.css
+++ b/paint.css
@@ -49,7 +49,7 @@ div div {
     color:white;
 }
 .white{
-    background-color: white;
+    background-color: none;
    
 }
 .brown{
